[gd_scene load_steps=5 format=3 uid="uid://cia5tecol73jv"]

[ext_resource type="Theme" uid="uid://duj3xsv2vc43h" path="res://assets/themes/theme.tres" id="1_tvj2c"]
[ext_resource type="Script" path="res://scenes/screens/server_detail_screen.gd" id="2_gjcpy"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bk1pm"]
color = Color(1, 1, 1, 0.313726)
thickness = 2

[sub_resource type="LabelSettings" id="LabelSettings_4hkt0"]
font_size = 24

[node name="ServerDetailScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tvj2c")
script = ExtResource("2_gjcpy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Return"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_bk1pm")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Edit Server"
label_settings = SubResource("LabelSettings_4hkt0")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_bk1pm")

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Server Name"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Server URL"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="URLEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "https://www.example.com"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0.784314)
layout_mode = 2
text = "/__admin"

[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TitleContainer/SaveButton" to="." method="_on_save_button_pressed"]
